--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,7 +15,12 @@ dependencies = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "pydantic (>=2.11.7,<3.0.0)",
     "pydantic-settings (>=2.10.1,<3.0.0)",
-    "uvicorn (>=0.35.0,<0.36.0)"
+    "uvicorn (>=0.35.0,<0.36.0)",
+    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
+    "authlib (>=1.6.0,<2.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "google-auth (>=2.40.3,<3.0.0)",
+    "itsdangerous (>=2.2.0,<3.0.0)"
 ]
 
 [tool.poetry]
