--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "authlib (>=1.6.0,<2.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "google-auth (>=2.40.3,<3.0.0)",
-    "itsdangerous (>=2.2.0,<3.0.0)"
+    "itsdangerous (>=2.2.0,<3.0.0)",
+    "orjson (>=3.10.18,<4.0.0)"
 ]
 
 [tool.poetry]
