--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,7 +21,9 @@ dependencies = [
     "pyjwt (>=2.10.1,<3.0.0)",
     "google-auth (>=2.40.3,<3.0.0)",
     "itsdangerous (>=2.2.0,<3.0.0)",
-    "orjson (>=3.10.18,<4.0.0)"
+    "orjson (>=3.10.18,<4.0.0)",
+    "requests (>=2.32.4,<3.0.0)",
+    "httpx (>=0.28.1,<0.29.0)"
 ]
 
 [tool.poetry]
